--- a/Cpp98/Cpp98/Cpp98.vcxproj.filters
+++ b/Cpp98/Cpp98/Cpp98.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="01_1_4.cpp">
       <Filter>Question</Filter>
     </ClCompile>
+    <ClCompile Include="01_2_1.cpp">
+      <Filter>Question</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
