--- a/Cpp98/Cpp98/Cpp98.vcxproj
+++ b/Cpp98/Cpp98/Cpp98.vcxproj
@@ -85,6 +85,9 @@
     <ClCompile Include="03_2_2_main.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="04_1_1.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01_4_1.h">
