Solve the problem

--- a/Cpp98/Cpp98/Cpp98.vcxproj.filters
+++ b/Cpp98/Cpp98/Cpp98.vcxproj.filters
@@ -90,6 +90,12 @@
     <ClCompile Include="04_2_1.cpp">
       <Filter>Question04</Filter>
     </ClCompile>
+    <ClCompile Include="04_3_1.cpp">
+      <Filter>Question04</Filter>
+    </ClCompile>
+    <ClCompile Include="04_3_2.cpp">
+      <Filter>Question04</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01_4_1.h">
