--- a/Cpp98/Cpp98/Cpp98.vcxproj.filters
+++ b/Cpp98/Cpp98/Cpp98.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="04_3_2.cpp">
       <Filter>Question04</Filter>
     </ClCompile>
+    <ClCompile Include="02.cpp">
+      <Filter>OOP Project</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01_4_1.h">
