Solve the problem

--- a/Cpp98/Cpp98/Cpp98.vcxproj.filters
+++ b/Cpp98/Cpp98/Cpp98.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Question04">
       <UniqueIdentifier>{66dc1328-43df-418d-a5fe-8ebc43b3b204}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Question05">
+      <UniqueIdentifier>{659c2cad-7203-477d-9e11-94a503eb6519}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="01_1_1.cpp">
@@ -97,6 +100,12 @@
       <Filter>Question04</Filter>
     </ClCompile>
     <ClCompile Include="02.cpp">
+      <Filter>OOP Project</Filter>
+    </ClCompile>
+    <ClCompile Include="05_1_1.cpp">
+      <Filter>Question05</Filter>
+    </ClCompile>
+    <ClCompile Include="03.cpp">
       <Filter>OOP Project</Filter>
     </ClCompile>
   </ItemGroup>
